src/test/resources/purescript_examples/passing/Unit.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Qualified)
          PureASTWrapperElement(ModuleName)
            PsiElement(proper name)('Prelude')
        PsiElement(whitespace)('\n')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Qualified)
          PureASTWrapperElement(ModuleName)
            PsiElement(proper name)('Debug')
            PsiElement(.)('.')
          PureASTWrapperElement(ModuleName)
            PsiElement(proper name)('Trace')
        PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PsiElement(identifier)('print')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(Parens)
              PsiElement(()('(')
              PureASTWrapperElement(Value)
                PureASTWrapperElement(PrefixValue)
                  PureASTWrapperElement(Var)
                    PureASTWrapperElement(Qualified)
                      PsiElement(identifier)('const')
                      PsiElement(whitespace)(' ')
                  PureASTWrapperElement(Var)
                    PureASTWrapperElement(Qualified)
                      PsiElement(identifier)('unit')
                      PsiElement(whitespace)(' ')
                PureASTWrapperElement(IdentInfix)
                  PureASTWrapperElement(Qualified)
                    PsiElement(operator)('$')
                    PsiElement(whitespace)(' ')
                PureASTWrapperElement(Value)
                  PureASTWrapperElement(PrefixValue)
                    PureASTWrapperElement(StringLiteral)
                      PsiElement(string)('"Hello world"')
              PsiElement())(')')
              PsiElement(whitespace)('\n')
